Fix line breaks on check boxes

--- a/ng-validation-service/src/app/configurations/configuration-manager/verapdf-setup-edit/verapdf-setup-edit.component.css
+++ b/ng-validation-service/src/app/configurations/configuration-manager/verapdf-setup-edit/verapdf-setup-edit.component.css
@@ -2,3 +2,6 @@
     border: 0px;
   }
   
+ html body .ui-chkbox-label {
+  white-space: pre-wrap
+}
